--- a/app/package.json
+++ b/app/package.json
@@ -2,13 +2,15 @@
   "dependencies": {
     "http-server": "^14.0.0"
   },
+  "scripts": {
+    "start": "http-server -p 8436",
+    "test": "echo \"Error: no test specified\" && exit 1"
+      },
   "name": "app",
   "version": "1.0.0",
   "main": "app.js",
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ 
   "author": "",
   "license": "ISC",
   "description": ""
